--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
 
-    <string-array name="spinner_items"
-        type="boil">
+    <string-array name="spinner_items" type="boil">
         <item>Mới nhất</item>
         <item>Cũ nhất</item>
         <item>Đang cập nhật</item>
